# tc-ai-backend

./: .gitignore  PROJECT_CONTEXT.md  Procfile  README.md  prompt.md  pyproject.toml
.github/workflows/: test.yml
app/: main.py
app/api/: lessons.py  students.py
app/core/: auth.py  celery_app.py  database.py
app/models/: __init__.py  company.py  lesson_tutor.py  student.py  tutor_student.py
app/tasks/: __init__.py  email_tasks.py
backend/: .gitignore  Makefile  README.md  env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  clients.py  lessons.py  students.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  client.py  company.py  lesson.py  lesson_student.py  student.py  user.py
backend/app/tasks/: analytics_tasks.py
backend/scripts/: run_dev.py  seed_data.py
backend/tests/: conftest.py  test_auth.py  test_clients.py  test_lessons.py  test_seed_data.py  test_students.py
frontend/: package-lock.json  package.json
frontend-minimal/: package-lock.json  package.json
frontend-minimal/.claude/: settings.local.json
frontend-minimal/app/: app.css  root.tsx  routes.ts
frontend-minimal/app/components/: Header.tsx  LessonCard.tsx  StudentCard.tsx
frontend-minimal/app/data/: dummy.ts
frontend-minimal/app/routes/: home.tsx  insights.tsx  lessons.$id.tsx  lessons.tsx  settings.tsx  students.$id.tsx  students.tsx
frontend-minimal/app/welcome/: welcome.tsx
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/components/: Calendar.tsx  DeleteModal.tsx  LessonListItem.tsx  Navigation.tsx  SlideOutPanel.tsx  StatsCard.tsx  StudentCard.tsx
frontend/app/data/: api.ts  students.ts
frontend/app/helpers/: lessons.ts  students.ts
frontend/app/providers/: AuthProvider.tsx  SlideOutPanelProvider.tsx
frontend/app/routes/: calendar.tsx  home.tsx  lesson-detail.tsx  lesson-edit.tsx  lesson-new.tsx  lessons.tsx  login.tsx  student-detail.tsx  students.tsx
frontend/app/svgs/: logo.tsx  logoIcon.tsx
frontend/app/types/: lessons.ts
scripts/: run_celery.py  seed_data.py
tests/: conftest.py  test_eurus_integration.py  test_lessons.py  test_seed_data.py
(+17 files in other folders)
